Intermediate Code Generation/grammars/output/TempNoJavaParser.java
/* Generated By:JavaCC: Do not edit this line. TempNoJavaParser.java */
import syntaxtree.*;
import java.util.Vector;


public class TempNoJavaParser implements TempNoJavaParserConstants {

  static final public Goal Goal() throws ParseException {
   MainClass n0;
   NodeToken n1;
   Token n2;
    n0 = MainClass();
    n2 = jj_consume_token(0);
      n2.beginColumn++; n2.endColumn++;
      n1 = JTBToolkit.makeNodeToken(n2);
     {if (true) return new Goal(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   Identifier n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   NodeToken n19;
   Token n20;
   NodeToken n21;
   Token n22;
   NodeToken n23;
   Token n24;
   NodeToken n25;
   Token n26;
   Identifier n27;
   NodeToken n28;
   Token n29;
   NodeToken n30;
   Token n31;
   NodeListOptional n32 = new NodeListOptional();
   VarDeclaration n33;
   NodeListOptional n34 = new NodeListOptional();
   Statement n35;
   NodeToken n36;
   Token n37;
   NodeListOptional n38 = new NodeListOptional();
   FunctionDeclaration n39;
   NodeToken n40;
   Token n41;
    n1 = jj_consume_token(51);
                         n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(52);
                                               n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(PUBLIC);
                 n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(CLASS);
                n6 = JTBToolkit.makeNodeToken(n7);
    n8 = Identifier();
    n10 = jj_consume_token(LBRACE);
             n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(PUBLIC);
                  n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(STATIC);
                  n13 = JTBToolkit.makeNodeToken(n14);
    n16 = jj_consume_token(VOID);
                n15 = JTBToolkit.makeNodeToken(n16);
    n18 = jj_consume_token(MAIN);
                n17 = JTBToolkit.makeNodeToken(n18);
    n20 = jj_consume_token(LPAREN);
             n19 = JTBToolkit.makeNodeToken(n20);
    n22 = jj_consume_token(STRING);
                  n21 = JTBToolkit.makeNodeToken(n22);
    n24 = jj_consume_token(LSQPAREN);
             n23 = JTBToolkit.makeNodeToken(n24);
    n26 = jj_consume_token(RSQPAREN);
             n25 = JTBToolkit.makeNodeToken(n26);
    n27 = Identifier();
    n29 = jj_consume_token(RPAREN);
             n28 = JTBToolkit.makeNodeToken(n29);
    n31 = jj_consume_token(LBRACE);
             n30 = JTBToolkit.makeNodeToken(n31);
    label_1:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_1;
      }
      n33 = VarDeclaration();
        n32.addNode(n33);
    }
     n32.nodes.trimToSize();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      n35 = Statement();
        n34.addNode(n35);
    }
     n34.nodes.trimToSize();
    n37 = jj_consume_token(RBRACE);
             n36 = JTBToolkit.makeNodeToken(n37);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      n39 = FunctionDeclaration();
        n38.addNode(n39);
    }
     n38.nodes.trimToSize();
    n41 = jj_consume_token(RBRACE);
             n40 = JTBToolkit.makeNodeToken(n41);
     {if (true) return new MainClass(n0,n2,n4,n6,n8,n9,n11,n13,n15,n17,n19,n21,n23,n25,n27,n28,n30,n32,n34,n36,n38,n40);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclaration VarDeclaration() throws ParseException {
   Type n0;
   Identifier n1;
   NodeToken n2;
   Token n3;
    n0 = Type();
    n1 = Identifier();
    n3 = jj_consume_token(SEMICOLON);
            n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new VarDeclaration(n0,n1,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionDeclaration FunctionDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   IntegerType n4;
   Identifier n5;
   NodeToken n6;
   Token n7;
   NodeOptional n8 = new NodeOptional();
   FormalParameterList n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   NodeListOptional n14 = new NodeListOptional();
   VarDeclaration n15;
   NodeListOptional n16 = new NodeListOptional();
   Statement n17;
   NodeToken n18;
   Token n19;
   SubPrimaryExpression n20;
   NodeToken n21;
   Token n22;
   NodeToken n23;
   Token n24;
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(STATIC);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = IntegerType();
    n5 = Identifier();
    n7 = jj_consume_token(LPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case STRING:
    case IDENTIFIER:
      n9 = FormalParameterList();
        n8.addNode(n9);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    n11 = jj_consume_token(RPAREN);
             n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(LBRACE);
             n12 = JTBToolkit.makeNodeToken(n13);
    label_4:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_4;
      }
      n15 = VarDeclaration();
        n14.addNode(n15);
    }
     n14.nodes.trimToSize();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_5;
      }
      n17 = Statement();
        n16.addNode(n17);
    }
     n16.nodes.trimToSize();
    n19 = jj_consume_token(RETURN);
                  n18 = JTBToolkit.makeNodeToken(n19);
    n20 = SubPrimaryExpression();
    n22 = jj_consume_token(SEMICOLON);
             n21 = JTBToolkit.makeNodeToken(n22);
    n24 = jj_consume_token(RBRACE);
             n23 = JTBToolkit.makeNodeToken(n24);
     {if (true) return new FunctionDeclaration(n0,n2,n4,n5,n6,n8,n10,n12,n14,n16,n18,n20,n21,n23);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterList FormalParameterList() throws ParseException {
   FormalParameter n0;
   NodeListOptional n1 = new NodeListOptional();
   FormalParameterRest n2;
    n0 = FormalParameter();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_6;
      }
      n2 = FormalParameterRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new FormalParameterList(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameter FormalParameter() throws ParseException {
   Type n0;
   Identifier n1;
    n0 = Type();
    n1 = Identifier();
     {if (true) return new FormalParameter(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterRest FormalParameterRest() throws ParseException {
   NodeToken n0;
   Token n1;
   FormalParameter n2;
    n1 = jj_consume_token(53);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = FormalParameter();
     {if (true) return new FormalParameterRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
   NodeChoice n0;
   BooleanType n1;
   IntegerType n2;
   StringType n3;
   Identifier n4;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      n1 = BooleanType();
        n0 = new NodeChoice(n1, 0);
      break;
    case INTEGER:
      n2 = IntegerType();
        n0 = new NodeChoice(n2, 1);
      break;
    case STRING:
      n3 = StringType();
        n0 = new NodeChoice(n3, 2);
      break;
    case IDENTIFIER:
      n4 = Identifier();
        n0 = new NodeChoice(n4, 3);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new Type(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanType BooleanType() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(BOOLEAN);
                  n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new BooleanType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerType IntegerType() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER);
              n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new IntegerType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public StringType StringType() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(STRING);
                 n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new StringType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   NodeChoice n0;
   Block n1;
   AssignmentStatement n2;
   FunctionCallStatement n3;
   IfStatement n4;
   WhileStatement n5;
   PrintStatement n6;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      n1 = Block();
        n0 = new NodeChoice(n1, 0);
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_3(2)) {
        n2 = AssignmentStatement();
        n0 = new NodeChoice(n2, 1);
      } else if (jj_2_4(2147483647)) {
        n3 = FunctionCallStatement();
        n0 = new NodeChoice(n3, 2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          n4 = IfStatement();
        n0 = new NodeChoice(n4, 3);
          break;
        case WHILE:
          n5 = WhileStatement();
        n0 = new NodeChoice(n5, 4);
          break;
        case PRINT:
          n6 = PrintStatement();
        n0 = new NodeChoice(n6, 5);
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return new Statement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Block Block() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   Statement n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(LBRACE);
            n0 = JTBToolkit.makeNodeToken(n1);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      n3 = Statement();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
    n5 = jj_consume_token(RBRACE);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new Block(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentStatement AssignmentStatement() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   Expression n3;
   NodeToken n4;
   Token n5;
    n0 = Identifier();
    n2 = jj_consume_token(ASSIGN);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
    n5 = jj_consume_token(SEMICOLON);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new AssignmentStatement(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionCallStatement FunctionCallStatement() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   NodeOptional n3 = new NodeOptional();
   ArgList n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
    n0 = Identifier();
    n2 = jj_consume_token(LPAREN);
            n1 = JTBToolkit.makeNodeToken(n2);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
    case TRUE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
      n4 = ArgList();
        n3.addNode(n4);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(SEMICOLON);
            n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new FunctionCallStatement(n0,n1,n3,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
   NodeToken n8;
   Token n9;
   Statement n10;
    n1 = jj_consume_token(IF);
             n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
    n9 = jj_consume_token(ELSE);
               n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Statement();
     {if (true) return new IfStatement(n0,n2,n4,n5,n7,n8,n10);}
    throw new Error("Missing return statement in function");
  }

  static final public WhileStatement WhileStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
    n1 = jj_consume_token(WHILE);
                n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
     {if (true) return new WhileStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintStatement PrintStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   SubPrimaryExpression n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
    n1 = jj_consume_token(PRINT);
                             n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = SubPrimaryExpression();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(SEMICOLON);
            n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new PrintStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
   NodeChoice n0;
   OrExpression n1;
   AndExpression n2;
   CompareExpression n3;
   NeqExpression n4;
   PlusExpression n5;
   MinusExpression n6;
   TimesExpression n7;
   DivExpression n8;
   MemMgrCall n9;
   FunctionCall n10;
   PrimaryExpression n11;
    if (jj_2_5(2147483647)) {
      n1 = OrExpression();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_6(2147483647)) {
      n2 = AndExpression();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_7(2147483647)) {
      n3 = CompareExpression();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_8(2147483647)) {
      n4 = NeqExpression();
        n0 = new NodeChoice(n4, 3);
    } else if (jj_2_9(2147483647)) {
      n5 = PlusExpression();
        n0 = new NodeChoice(n5, 4);
    } else if (jj_2_10(2147483647)) {
      n6 = MinusExpression();
        n0 = new NodeChoice(n6, 5);
    } else if (jj_2_11(2147483647)) {
      n7 = TimesExpression();
        n0 = new NodeChoice(n7, 6);
    } else if (jj_2_12(2147483647)) {
      n8 = DivExpression();
        n0 = new NodeChoice(n8, 7);
    } else if (jj_2_13(2147483647)) {
      n9 = MemMgrCall();
        n0 = new NodeChoice(n9, 8);
    } else if (jj_2_14(2147483647)) {
      n10 = FunctionCall();
        n0 = new NodeChoice(n10, 9);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case FALSE:
      case TRUE:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        n11 = PrimaryExpression();
        n0 = new NodeChoice(n11, 10);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Expression(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public AndExpression AndExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(55);
             n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new AndExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public OrExpression OrExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(54);
             n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new OrExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public CompareExpression CompareExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(LT);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new CompareExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public NeqExpression NeqExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(56);
             n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new NeqExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public PlusExpression PlusExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(PLUS);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new PlusExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public MinusExpression MinusExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(MINUS);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new MinusExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public TimesExpression TimesExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(57);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new TimesExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public DivExpression DivExpression() throws ParseException {
   SubPrimaryExpression n0;
   NodeToken n1;
   Token n2;
   SubPrimaryExpression n3;
    n0 = SubPrimaryExpression();
    n2 = jj_consume_token(58);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = SubPrimaryExpression();
     {if (true) return new DivExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public MemMgrCall MemMgrCall() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   NodeOptional n7 = new NodeOptional();
   ArgList n8;
   NodeToken n9;
   Token n10;
    n1 = jj_consume_token(MEMMGR);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(DOT);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(LPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
    case TRUE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
      n8 = ArgList();
        n7.addNode(n8);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    n10 = jj_consume_token(RPAREN);
             n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new MemMgrCall(n0,n2,n4,n5,n7,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionCall FunctionCall() throws ParseException {
   NodeOptional n0 = new NodeOptional();
   TypeCast n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeOptional n5 = new NodeOptional();
   ArgList n6;
   NodeToken n7;
   Token n8;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      n1 = TypeCast();
        n0.addNode(n1);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    n2 = Identifier();
    n4 = jj_consume_token(LPAREN);
            n3 = JTBToolkit.makeNodeToken(n4);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
    case TRUE:
    case INTEGER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFIER:
      n6 = ArgList();
        n5.addNode(n6);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    n8 = jj_consume_token(RPAREN);
            n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new FunctionCall(n0,n2,n3,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public ArgList ArgList() throws ParseException {
   SubPrimaryExpression n0;
   NodeListOptional n1 = new NodeListOptional();
   ArgRest n2;
    n0 = SubPrimaryExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      n2 = ArgRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ArgList(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ArgRest ArgRest() throws ParseException {
   NodeToken n0;
   Token n1;
   SubPrimaryExpression n2;
    n1 = jj_consume_token(53);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = SubPrimaryExpression();
     {if (true) return new ArgRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }
